# Citadel.WebApi/Routes/Endpoints/Resources/Auth/RefreshTokenResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace WebApi.Routes.Endpoints.Resources.Auth;
+
+public sealed record RefreshTokenResponse(string AccessToken);
